--- a/package.json
+++ b/package.json
@@ -57,6 +57,6 @@
           "dev": "vite",
           "build": "vite build",
           "preview": "vite preview",
-          "deploy": "npm run build && gh-pages -d dist"
+          "deploy": "npm run build && gh-pages -d dist --dotfiles"
       }
   }
